# mav_trajectory_generation

./: README.md
mav_trajectory_generation_ros/: CMakeLists.txt  CMakeLists_orig.txt  package.xml
mav_trajectory_generation_ros/landing_sites_dump/: test_py.npy  test_py1.npy
mav_trajectory_generation_ros/launch/: path_plan.launch
mav_trajectory_generation_ros/maps_dump/: airsim_map_small.bt  lab_map.bt  mapfile.bt
mav_trajectory_generation_ros/rviz/: path_planning_with_markers.rviz
mav_trajectory_generation_ros/src/: cur_point_transformer.cpp  load_landing_sites.py  old_path_planning (copy).cpp  old_path_planning.cpp  old_path_planning_latest.cpp  old_path_planning_works.cpp  run_test.cpp  run_test_completely_fresh.cpp  run_test_test.cpp
path_planning-master/src/: old_path_planning.cpp  old_path_planning_test.cpp
